# software-arch

./: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  docker-compose.yml  generated_image.rs  inspiration_image.rs  prometheus.yaml  readme.md
.github/workflows/: ec2deploy.yaml
database/: Cargo.toml
database/migration/: Cargo.toml
database/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240301_053139_create_generated_image.rs  m20240313_032654_add_descripiton_to_generated_image.rs
database/src/: lib.rs
database/src/entity/: generated_image.rs  inspiration_image.rs  mod.rs  prelude.rs
database/tests/: main.rs
image_collector/: Cargo.toml
image_collector/src/: lib.rs  main.rs
image_collector/tests/: main.rs
image_generator/: Cargo.toml
image_generator/src/: main.rs
server/: Cargo.toml
server/src/: api.rs  lib.rs  main.rs  startup.rs  template.rs
server/templates/: base.html  generated-image.html  image.html  images.html  index.html
server/tests/: main.rs
