[workspace]

members = ["database", "database/migration", "image_collector", "server"]

[workspace.dependencies]
anyhow = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "0.11.3", features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1.37"
testcontainers = "0.14.0"
