[workspace]

members = [
    "database",
    "database/migration",
    "image_collector",
    "image_generator",
    "server",
]

[workspace.dependencies]
anyhow = "1"
pgmq = "0.26.1"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "0.11.3", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.18"
testcontainers = "0.14.0"
wiremock = "0.5"
