[package]
name = "image_collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database/" }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-cron-scheduler = "0.10.0"
reqwest = { workspace = true }
serde = { workspace = true }
sea-orm = { workspace = true }
testcontainers = { workspace = true }
