[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
prometheus = "0.13.3"
actix-web-prom = "0.6.0"
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
